syntax = "proto3";

package com.example.bookstore;

option java_package = "com.example.bookstore";
option java_outer_classname = "BookstoreProto";

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

message GetBookRequest {
  string id = 1;
}

message DeleteBookRequest {
  string id = 1;
}

service BookstoreService {
  rpc AddBook(Book) returns (Book);
  rpc GetBook(GetBookRequest) returns (Book);
  rpc UpdateBook(Book) returns (Book);
  rpc DeleteBook(DeleteBookRequest) returns (Book);
}